--- a/src/components/footer/footer.component.css
+++ b/src/components/footer/footer.component.css
@@ -1,10 +1,6 @@
-  /* Estilos para el pie de página */
-  
-  footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-  }
-
-  
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 2px;
+}
