--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,18 +1,114 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Inicio - Mi Empresa</title>
-  <link rel="stylesheet" href="./home.component.css"> <!-- Agrega aquí tu archivo de estilos CSS -->
-</head>
-<body>
+<section class="video-section">
+  <video
+    muted
+    autoplay
+    loop
+    playsinline="" preload="metadata" onloadedmetadata="this.muted=true"
+    poster="https://freebirdagency.com/wp-content/uploads/freebird_back_3-1600x1067.jpg"
+  >
+    <source src="../../assets/storm.mp4" type="video/mp4" />
+  </video>
+  <h1>Bienvenido a Balkan Agency</h1>
+  <p>
+    Somos una agencia de marketing digital y brand growth comprometida con el
+    éxito de tu marca.
+  </p>
+</section>
 
-  <section id="hero">
-    <h1>Bienvenido a Balkan Agency</h1>
-    <p>Somos una agencia de marketing digital y brand growth comprometida con el éxito de tu marca.</p>
-  </section>
-
-</body>
-</html>
-
+<section class="section-2">
+  <h1>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+    consectetur nesciunt, illum aperiam enim sequi itaque asperiores temporibus
+    repellendus, est maiores ut saepe eum eius dicta at. At, ducimus voluptatem.
+  </h1>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+  <p>
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
+    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
+    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
+  </p>
+</section>
