--- a/src/components/contact/contact.component.css
+++ b/src/components/contact/contact.component.css
@@ -8,6 +8,7 @@
   background-size: cover;
   background-position: center;
   overflow: hidden; /* Oculta el desbordamiento del fondo animado */
+  padding: 100px;
 }
 
 .contact-content {
@@ -18,6 +19,7 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Sombra */
   transition: transform 0.3s ease;
   animation: fadeInUp 1s ease;
+  margin: 20px;
 }
 
 .contact-content h2 {
