--- a/src/components/about/about.component.css
+++ b/src/components/about/about.component.css
@@ -1,5 +1,3 @@
-@import url(../../../node_modules/bootstrap/dist/css/bootstrap.min.css);
-
 .about-container {
     display: flex;
     justify-content: center;
@@ -103,4 +101,79 @@
       opacity: 1;
     }
   }
+
+  /* ESTILOS DEL VIDEO */
+
+/* Estilos específicos para pantallas más pequeñas (móviles) */
+@media screen and (max-width: 768px) {
+  .video-section {
+    min-height: 300px; /* Ajustar la altura mínima del contenedor */
+    flex-direction: column;
+  }
+
+  video {
+    height: auto; /* Permitir que el video mantenga su relación de aspecto */
+  }
+
+  .video-section h1 {
+    font-size: 0.7em; /* Reducir el tamaño del h1 en pantallas pequeñas */
+    margin-bottom: 10px; /* Ajustar el margen inferior */
+  }
+
+  .video-section p {
+    font-size: 0.5em; /* Reducir el tamaño del párrafo en pantallas pequeñas */
+    margin-bottom: 20px; /* Ajustar el margen inferior */
+  }
+}
+
+.video-section {
+  position: relative; /* Ajuste importante */
+  flex-direction: column;
+  top: 0;
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden; /* Ajuste importante */
+  display: flex; /* Para centrar verticalmente el contenido */
+  justify-content: center; /* Para centrar verticalmente el contenido */
+  align-items: center; /* Para centrar verticalmente el contenido */
+  text-align: center; /* Para centrar el contenido en dispositivos móviles */
+}
+
+video {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover; /* Ajuste para que el video cubra todo el contenedor */
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -1;
+}
+
+.video-section h1 {
+  font-size: 4em; /* Tamaño de fuente grande */
+  color: #fff; /* Color de texto blanco */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Efecto de sombra */
+  margin-bottom: 20px; /* Espaciado inferior */
+}
+
+.video-section p {
+  font-size: 1.5em; /* Tamaño de fuente grande */
+  color: #fff; /* Color de texto blanco */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Efecto de sombra */
+  margin-bottom: 30px; /* Espaciado inferior */
+}
+
+.video-section h1::after,
+.video-section p::after {
+  content: ""; /* Pseudo-elemento para el efecto de llamada de atención */
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #ff6600; /* Color de línea */
+  margin-top: 10px; /* Espaciado superior */
+}
+
   
