--- a/src/components/about/about.component.html
+++ b/src/components/about/about.component.html
@@ -1,4 +1,4 @@
-<section class="carousel">
+<!--<section class="carousel">
   <div class="carousel-container">
     <div class="carousel-slide">
       <h2>Acerca de Nosotros</h2>
@@ -58,5 +58,33 @@
   <button class="prev-slide" (click)="prevSlide()">&#10094;</button>
   <button class="next-slide" (click)="nextSlide()">&#10095;</button>
 </section>
-
-
+-->
+<section class="video-section" id="section1">
+  <video
+    muted
+    autoplay
+    loop
+    playsinline=""
+    preload="metadata"
+    onloadedmetadata="this.muted=true"
+    poster="https://freebirdagency.com/wp-content/uploads/freebird_back_3-1600x1067.jpg"
+  >
+    <source src="../../assets/storm.mp4" type="video/mp4" />
+  </video>
+  <h1>We're your partners on the journey to success</h1>
+  <p>In a constantly changing world, we're here to keep you otterly up to date and ahead.</p>
+</section>
+<section class="about-carousel">
+<div class="container-fluid">
+  <div class="row">
+     <ngb-carousel>
+         <ng-template ngbSlide *ngFor='let img of images; let i=index'>*
+             <img [src]=[img] alt="Random first slide" class="width-100">
+                <div class="carousel-caption">
+                    <h3> {{ title [i] }} </h3>
+                </div>
+         </ng-template> 
+     </ngb-carousel>
+  </div>
+</div>
+</section>
