--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,5 +1,4 @@
-
 <footer>
-    <p>Derechos de Autor © 2024 Balkan Agency. Todos los derechos reservados.</p>
+    <p>Copyright © 2024 Austral Agency Co. All rights reserved.</p>
 </footer>
 
