--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="video-section">
+<section class="video-section" id="section1">
   <video
     muted
     autoplay
@@ -8,107 +8,43 @@
   >
     <source src="../../assets/storm.mp4" type="video/mp4" />
   </video>
-  <h1>Bienvenido a Balkan Agency</h1>
+  <h1>Success is a stream away</h1>
   <p>
-    Somos una agencia de marketing digital y brand growth comprometida con el
-    éxito de tu marca.
+    Join us and let's make waves together.
   </p>
 </section>
 
-<section class="section-2">
+<section class="section-2" id="section2">
   <h1>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
     consectetur nesciunt, illum aperiam enim sequi itaque asperiores temporibus
     repellendus, est maiores ut saepe eum eius dicta at. At, ducimus voluptatem.
   </h1>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
-  <p>
-    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque obcaecati
-    nostrum eligendi nobis? Itaque incidunt repudiandae ex, et mollitia possimus
-    illum est qui libero, cupiditate ab quos, a laboriosam nemo.
-  </p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <!--<img src="../../assets/hitler.gif" alt="hitler">-->
+        <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">AUSTRAL AGENCY MISSION</h1>
+      </div>
+      <div class="col-md-6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, natus. Repudiandae sunt vero tempore. Id, a aliquam. Dolor corrupti, quibusdam libero eius nam cumque, esse molestias beatae quaerat sequi impedit.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, natus. Repudiandae sunt vero tempore. Id, a aliquam. Dolor corrupti, quibusdam libero eius nam cumque, esse molestias beatae quaerat sequi impedit.</p>
+      </div>
+      <div class="col-md-6">
+        <img src="../../assets/hitler.gif" alt="hitler 2">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <img src="../../assets/hitler.gif" alt="hitler 3">
+      </div>
+      <div class="col-md-6">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, natus. Repudiandae sunt vero tempore. Id, a aliquam. Dolor corrupti, quibusdam libero eius nam cumque, esse molestias beatae quaerat sequi impedit.</p>
+      </div>
+    </div>
+  </div>
 </section>
