--- a/src/components/nav-bar/nav-bar.component.css
+++ b/src/components/nav-bar/nav-bar.component.css
@@ -1,4 +1,4 @@
-@import "../../../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
 
 @media (min-width: 992px){
 .navbar-expand-lg .navbar-collapse {
@@ -14,6 +14,10 @@
     display: flex;
     flex-direction: column;
   }
+  .mr-2{
+    width: 50px;
+
+  }
 }
 
 .nav-item{
@@ -22,10 +26,14 @@
 }
 
 .nav-link{
-  color: aqua;
+  color: rgb(0, 0, 0);
 }
 
 .bg-primary{
   --bs-bg-opacity: 0.5;
-  background-color: rgba(99, 95, 95, 0.836) !important;
+  background-color: #ffffff !important;
+}
+
+.mr-2{
+  width: 200px;
 }
