--- a/src/components/nav-bar/nav-bar.component.html
+++ b/src/components/nav-bar/nav-bar.component.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary sticky-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="../../assets/favicon.jpg" alt="Logo" class="mr-2" style="height: 30px;"> Balkan Agency
+      <img src="../../assets/newLogo.png" alt="Logo" class="mr-2">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" [ngbCollapse]="isCollapsed">
+    <div class="collapse navbar-collapse" [ngbCollapse]="!isCollapsed">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/" routerLinkActive="active">Inicio</a>
