--- a/src/components/contact/contact.component.html
+++ b/src/components/contact/contact.component.html
@@ -15,7 +15,7 @@
 </section>
 
 <div>
-  <h2>You found us, that’s amazing!</h2>
+  <h2>You found us, that's amazing!</h2>
 </div>
 
 <section class="contact-container">
@@ -25,28 +25,28 @@
       <div class="mb-5">
         <label for="name" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Full name</label>
         <input type="text" id="name" class="form-control" placeholder="Name" formControlName="name">
-        @if (contactForm.get('name')?.hasError('required') && contactForm.get('name')?.touched) {
-        <div class="form-error">Name is required</div>
-        }
+        <div *ngIf="contactForm.get('name')?.invalid && (contactForm.get('name')?.dirty || contactForm.get('name')?.touched)">
+          <div *ngIf="contactForm.get('name')?.errors?.['required']" class="form-error">Name is required</div>
+        </div>
       </div>
       <div class="mb-5">
         <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Email Address</label>
-        <input type="email" pattern="email" id="email" class="form-control" placeholder="Address" formControlName="email">
-        @if (contactForm.get('email')?.hasError('required') && contactForm.get('email')?.touched || contactForm.get('email')?.hasError('email') && contactForm.get('email')?.touched) {
-        <div class="form-error">Email is required</div>
-        <div class="form-error">Email format is invalid</div>
-        }
+        <input type="email" id="email" class="form-control" placeholder="Address" formControlName="email">
+        <div *ngIf="contactForm.get('email')?.invalid && (contactForm.get('email')?.dirty || contactForm.get('email')?.touched)">
+          <div *ngIf="contactForm.get('email')?.errors?.['required']" class="form-error">Email is required</div>
+          <div *ngIf="contactForm.get('email')?.errors?.['email']" class="form-error">Email format is invalid</div>
+        </div>
       </div>
       <div class="mb-5">
         <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Message</label>
-        <input type="text" maxlength="500" id="message" class="form-control" placeholder="Type Something" formControlName="message">
-        @if (contactForm.get('message')?.hasError('required') && contactForm.get('message')?.touched) {
-        <div class="form-error">Message is required</div>
-        }
+        <input type="text" id="message" class="form-control" placeholder="Type Something" formControlName="message">
+        <div *ngIf="contactForm.get('message')?.invalid && (contactForm.get('message')?.dirty || contactForm.get('message')?.touched)">
+          <div *ngIf="contactForm.get('message')?.errors?.['required']" class="form-error">Message is required</div>
+        </div>
       </div>
   
-      <button type="submit"
-    class="text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg w-full sm:w-auto px-5 py-2.5 text-center">Submit</button>
+      <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 font-medium rounded-lg w-full sm:w-auto px-5 py-2.5 text-center">Submit</button>
     </form>
   </div>
 </section>
+
