--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,50 +1,24 @@
 <section class="video-section" id="section1">
-  <video
-    muted
-    autoplay
-    loop
-    playsinline="" preload="metadata" onloadedmetadata="this.muted=true"
-    poster="https://freebirdagency.com/wp-content/uploads/freebird_back_3-1600x1067.jpg"
-  >
-    <source src="../../assets/storm.mp4" type="video/mp4" />
-  </video>
-  <h1>Success is a stream away</h1>
-  <p>
-    Join us and let's make waves together.
-  </p>
+  <div class="banner-img-container" style="position: relative;">
+    <img src="../../assets/fullbet.png" alt="Banner" class="banner-img" />
+    <div class="contacto-absolute">
+      <div class="contacto-content">
+        <div class="contact-info">
+          <p>¿Listo para empezar a jugar y ganar? ¡Contáctanos ahora!</p>
+          <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="whatsapp-btn">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
+            Contáctanos por WhatsApp
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>  
 </section>
-
 <section class="section-2" id="section2">
-  <h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-    consectetur nesciunt, illum aperiam enim sequi itaque asperiores temporibus
-    repellendus, est maiores ut saepe eum eius dicta at. At, ducimus voluptatem.
+  <h1 #section2Title id="section2-title" style="background-color: brown;">
+    No es suerte. Es FULLBET.
   </h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <!--<img src="../../assets/hitler.gif" alt="hitler">-->
-        <h1 style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">AUSTRAL AGENCY MISSION</h1>
-      </div>
-      <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, natus. Repudiandae sunt vero tempore. Id, a aliquam. Dolor corrupti, quibusdam libero eius nam cumque, esse molestias beatae quaerat sequi impedit.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, natus. Repudiandae sunt vero tempore. Id, a aliquam. Dolor corrupti, quibusdam libero eius nam cumque, esse molestias beatae quaerat sequi impedit.</p>
-      </div>
-      <div class="col-md-6">
-        <img src="../../assets/hitler.gif" alt="hitler 2">
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <img src="../../assets/hitler.gif" alt="hitler 3">
-      </div>
-      <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, natus. Repudiandae sunt vero tempore. Id, a aliquam. Dolor corrupti, quibusdam libero eius nam cumque, esse molestias beatae quaerat sequi impedit.</p>
-      </div>
-    </div>
-  </div>
+  <h2>
+    OBTENE TU BONUS DEL 30% Y PARTICIPA DEL SORTEO SEMANAL DE 20.000 FICHAS
+  </h2>
 </section>
