--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-html, body{
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    height: 100vh;
+html, body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  height: 100vh;
+  background: #1a0a12;
+  color: #fff;
 }
 
 body{
     /*background: linear-gradient(#1B5C6C, #33150D);*/
     background-size: cover;
+    background: #1a0a12;
     background-attachment: fixed;
 }
 
