Revert "Commit Fullbet"
This reverts commit 5bf5e997e6cfe8a4b15de5bb1f1c97ff7dcd7214.

--- a/src/components/about/about.component.css
+++ b/src/components/about/about.component.css
@@ -1,4 +1,108 @@
-/* Estilos generales */
+.about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: black;
+  }
+  
+  .about-content {
+    text-align: center;
+  }
+  
+  .about-content h2 {
+    font-size: 2.5em;
+    color: #333;
+  }
+  
+  .about-content p {
+    font-size: 1.2em;
+    color: #666;
+    margin-top: 20px;
+  }
+  
+  /* Animaciones simples */
+  .about-container {
+    animation-name: fadeIn;
+    animation-duration: 1s;
+  }
+
+  /* CAROUSEL */
+
+  .carousel {
+    position: relative;
+    max-width: 800px;
+    margin: auto;
+    overflow: hidden;
+    padding: 20px;
+  }
+  
+  .carousel-container {
+    display: flex;
+    width: 400%;
+  }
+  
+  .carousel-slide {
+    flex: 1;
+    margin-right: 20px;
+    transition: transform 0.5s ease;
+  }
+  
+  .carousel-slide h2 {
+    font-size: 2.5em;
+    color: #333;
+  }
+  
+  .carousel-slide p {
+    font-size: 1.2em;
+    color: #666;
+  }
+  
+  .prev-slide,
+  .next-slide {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+  }
+  
+  .prev-slide {
+    left: 0;
+  }
+  
+  .next-slide {
+    right: 0;
+  }
+
+  @media (max-width: 600px) {
+    .carousel-slide {
+      padding-right: 10px; /* Reducir el espacio entre slides en pantallas pequeñas */
+    }
+    
+    .prev-slide,
+    .next-slide {
+      font-size: 14px; /* Reducir el tamaño de la fuente de los botones en pantallas pequeñas */
+      padding: 8px; /* Reducir el espacio interior de los botones en pantallas pequeñas */
+      position: relative;
+    }
+  }
+
+  
+  /* KEYFRAMES */
+  
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  /* ESTILOS DEL VIDEO */
 
 /* Estilos específicos para pantallas más pequeñas (móviles) */
 @media screen and (max-width: 768px) {
@@ -72,31 +176,4 @@ video {
   margin-top: 10px; /* Espaciado superior */
 }
 
-/* Estilos específicos para la sección hero */
-
-.btn {
-  display: inline-block;
-  background-color: #ff6600;
-  color: #fff;
-  padding: 10px 20px;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: background-color 0.3s;
-}
-
-.btn:hover {
-  background-color: #e65300;
-}
-
-.section-2{
-  margin: 0 auto;
-  padding: 0.5em;
-  text-align: center;
-  border: 0;
-  background-color: white;
-  background-size: cover;
-}
-
-.row{
-  align-items: center;
-}
+  
