--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,14 +1,4 @@
 <footer>
-  <div class="footer-content">
-    <img src="../../assets/newLogo.png" alt="FullBet Logo" class="footer-logo">
-    <div class="footer-text">
-      <p>Copyright © 2025, 1fullbet.com, All rights reserved.</p>
-      <p>¡Gracias por confiar en nosotros!</p>
-    </div>
-    <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="footer-whatsapp">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="footer-whatsapp-icon">
-      Soporte
-    </a>
-  </div>
+    <p>Copyright © 2024 Austral Agency Co. All rights reserved.</p>
 </footer>
 
