--- a/src/components/nav-bar/nav-bar.component.html
+++ b/src/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary sticky-top">
-  <div class="container-2">
+  <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="../../assets/newLogo.png" alt="Logo" class="mr-2 logo-img">
+      <img src="../../assets/newLogo.png" alt="Logo" class="mr-2">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed">
       <span class="navbar-toggler-icon"></span>
@@ -9,17 +9,20 @@
     <div class="collapse navbar-collapse" [ngbCollapse]="!isCollapsed">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" routerLinkActive="active">FullBet</a>
+          <a class="nav-link" routerLink="/" routerLinkActive="active">Inicio</a>
         </li>
         <li class="nav-item">
-          <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="whatsapp-btn navbar-whatsapp">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
-            <span class="whatsapp-text">Contacto</span>
-          </a>
+          <a class="nav-link" routerLink="/sobre-nosotros" routerLinkActive="active">Sobre Nosotros</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/servicios" routerLinkActive="active">Servicios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contacto" routerLinkActive="active">Contacto</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-
+  
