Primer commit al nuevo repositorio FullBet

--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -5,7 +5,7 @@
       <p>Copyright © 2025, 1fullbet.com, All rights reserved.</p>
       <p>¡Gracias por confiar en nosotros!</p>
     </div>
-    <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="footer-whatsapp">
+    <a href="https://wa.me/5492215868195" target="_blank" class="footer-whatsapp">
       <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="footer-whatsapp-icon">
       Soporte
     </a>
