--- a/src/components/nav-bar/nav-bar.component.html
+++ b/src/components/nav-bar/nav-bar.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link" routerLink="/" routerLinkActive="active">FullBet</a>
         </li>
         <li class="nav-item">
-          <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="whatsapp-btn navbar-whatsapp">
+          <a href="https://wa.me/5492215868195" target="_blank" class="whatsapp-btn navbar-whatsapp">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
             <span class="whatsapp-text">Contacto</span>
           </a>
