--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -5,7 +5,7 @@
       <div class="contacto-content">
         <div class="contact-info">
           <p>¿Listo para empezar a jugar y ganar? ¡Contáctanos ahora!</p>
-          <a href="https://wa.me/549XXXXXXXXXX" target="_blank" class="whatsapp-btn">
+          <a href="https://wa.me/5492215868195" target="_blank" class="whatsapp-btn">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
             Contáctanos por WhatsApp
           </a>
