--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,6 +1,7 @@
 <footer>
   <div class="footer-content">
-    <img src="../../assets/newLogo.png" alt="FullBet Logo" class="footer-logo">
+    <!-- ../../assets/newLogo.png PARA LOCAL-->
+    <img src="assets/newLogo.png" alt="FullBet Logo" class="footer-logo">
     <div class="footer-text">
       <p>Copyright © 2025, 1fullbet.com, All rights reserved.</p>
       <p>¡Gracias por confiar en nosotros!</p>
