--- a/src/components/home/home.component.html
+++ b/src/components/home/home.component.html
@@ -1,6 +1,7 @@
 <section class="video-section" id="section1">
   <div class="banner-img-container" style="position: relative;">
-    <img src="../../assets/fullbet.png" alt="Banner" class="banner-img" />
+    <!-- ../../assets/fullbet.png PARA LOCAL-->
+    <img src="assets/fullbet.png" alt="Banner" class="banner-img" />
     <div class="contacto-absolute">
       <div class="contacto-content">
         <div class="contact-info">
