--- a/src/components/nav-bar/nav-bar.component.html
+++ b/src/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-primary sticky-top">
   <div class="container-2">
     <a class="navbar-brand" href="#">
-      <img src="../../assets/newLogo.png" alt="Logo" class="mr-2 logo-img">
+      <!-- ../../assets/newLogo.png PARA LOCAL-->
+      <img src="assets/newLogo.png" alt="Logo" class="mr-2 logo-img">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed">
       <span class="navbar-toggler-icon"></span>
